--- a/operate_files/install_soft.yaml
+++ b/operate_files/install_soft.yaml
@@ -35,7 +35,7 @@
 
     - name: Configure SNMPD to listen on all interfaces
       ansible.builtin.shell:
-        cmd: sed -i 's/^agentAddress  127\.0\.0\.1,\[::1\]$/agentAddress  0.0.0.0,[::1]/' /etc/snmp/snmpd.conf
+        cmd: sed -i 's/^agentaddress  127\.0\.0\.1,\[::1\]$/agentaddress  0.0.0.0,[::1]/' /etc/snmp/snmpd.conf
 
     - name: Ensure snmpd is running
       ansible.builtin.service:
