--- a/operate_files/inventory.ini
+++ b/operate_files/inventory.ini
@@ -1,21 +1,23 @@
 [bastion]
-103.57.74.165
+91.106.195.202
 
 [proxy]
-91.106.195.167
+91.123.202.210
 
 [service_workers]
 
-10.0.0.211
+10.0.0.86
+
+10.0.0.155
 
 
 [all:vars]
 ansible_ssh_user=ubuntu
-ansible_ssh_private_key_file=r2_key
+ansible_ssh_private_key_file=key_r2
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ForwadAgent=yes'
 
 [service_workers:vars]
-ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i r2_key -W %h:%p -o StrictHostKeyChecking=no ubuntu@103.57.74.165" '
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i key_r2 -W %h:%p -o StrictHostKeyChecking=no ubuntu@91.106.195.202" '
 
 [proxy:vars]
-ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i r2_key -W %h:%p -o StrictHostKeyChecking=no ubuntu@103.57.74.165" '
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i key_r2 -W %h:%p -o StrictHostKeyChecking=no ubuntu@91.106.195.202" '
