--- a/install_files/inventory.ini
+++ b/install_files/inventory.ini
@@ -1,25 +1,25 @@
 [bastion]
-103.57.74.165
+91.106.195.202
 
 [proxy]
-91.106.195.167
+91.123.202.210
 
 [service_workers]
 
-10.0.0.211
+10.0.0.147
 
-10.0.0.146
+10.0.0.237
 
-10.0.0.7
+10.0.0.118
 
 
 [all:vars]
 ansible_ssh_user=ubuntu
-ansible_ssh_private_key_file=../storage/r2_key
+ansible_ssh_private_key_file=../storage/key_r2
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ForwardAgent=yes'
 
 [service_workers:vars]
-ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i ../storage/r2_key -W %h:%p -o StrictHostKeyChecking=no ubuntu@103.57.74.165" '
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i ../storage/key_r2 -W %h:%p -o StrictHostKeyChecking=no ubuntu@91.106.195.202" '
 
 [proxy:vars]
-ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i ../storage/r2_key -W %h:%p -o StrictHostKeyChecking=no ubuntu@103.57.74.165" '
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o ProxyCommand="ssh -i ../storage/key_r2 -W %h:%p -o StrictHostKeyChecking=no ubuntu@91.106.195.202" '
