--- a/operate_files/install_soft.yaml
+++ b/operate_files/install_soft.yaml
@@ -4,12 +4,18 @@
   gather_facts: false
   become: true
   pre_tasks:
-    - name: Wait for connection and gather facts
-      ansible.builtin.setup:
+    - name: Wait for all hosts to be reachable
+      wait_for_connection:
+        delay: 5
+        timeout: 300
       retries: 10
       delay: 5
-      register: result
-      until: result is success
+      register: wait_result
+      until: wait_result is success
+      any_errors_fatal: true
+
+    - name: Gather facts
+      setup:
   tasks:
     - name: Transfer service.py to remote server
       ansible.builtin.copy:
